--- a/Projects/Basic-Portfolio-Bootstrap/index.html
+++ b/Projects/Basic-Portfolio-Bootstrap/index.html
@@ -40,17 +40,18 @@
             </div>
             <h2 class="display-6">About Me</h2>
                 <p class="lead">                
-                    My name is Anthony Le, a newly established developer.  I haven't had much experience in coding before, but I am eager to learn and am quick to pick up on new ideas and subjects.  I also love a challenge so I am looking forward to the grit of this BootCamp.  So far I am moderately versed in HTML and CSS, but that repertoire is bound to grow soon!</p>
+                    My name is Anthony Le, a newly established developer.  I haven't had much experience in coding before, but I am eager to learn and am quick to pick up on new ideas and subjects.  I also love a challenge so I am looking forward to the grit of this BootCamp.  I am moderately skilled in HTML, CSS, and JavaScript.  I am familiar with a few technologies, such as Bootstrap, jQuery, Ajax, Firebase, and Node.js</p>
                 </p>
             <hr class="my-4">
                 <p>                
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et diam eu ligula pellentesque egestas. Duis maximus ipsum ligula, et maximus urna faucibus eu. Suspendisse quis lacus sed libero vestibulum ullamcorper scelerisque ut libero. Praesent volutpat cursus viverra. Sed vestibulum pulvinar eros, non congue lorem placerat at. Maecenas mi dolor, fringilla fringilla lorem eget, maximus dignissim lectus. Cras condimentum elementum est, sed placerat massa ultrices ac.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et diam eu ligula pellentesque egestas. Duis maximus ipsum ligula, et maximus urna faucibus eu. Suspendisse quis lacus sed libero vestibulum ullamcorper scelerisque ut libero. Praesent volutpat cursus viverra. Sed vestibulum pulvinar eros, non congue lorem placerat at. Maecenas mi dolor, fringilla fringilla lorem eget, maximus dignissim lectus. Cras condimentum elementum est, sed placerat massa ultrices ac.
+                    Here on my page you can find some of my projects.  They range from rudimentary word guessing games to RPG's complete with attribute points and a profile system.  You can also visit my GitHub and LinkedIn pages.
                     <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et diam eu ligula pellentesque egestas. Duis maximus ipsum ligula, et maximus urna faucibus eu. Suspendisse quis lacus sed libero vestibulum ullamcorper scelerisque ut libero. Praesent volutpat cursus viverra. Sed vestibulum pulvinar eros, non congue lorem placerat at. Maecenas mi dolor, fringilla fringilla lorem eget, maximus dignissim lectus. Cras condimentum elementum est, sed placerat massa ultrices ac.
 
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et diam eu ligula pellentesque egestas. Duis maximus ipsum ligula, et maximus urna faucibus eu. Suspendisse quis lacus sed libero vestibulum ullamcorper scelerisque ut libero. Praesent volutpat cursus viverra. Sed vestibulum pulvinar eros, non congue lorem placerat at. Maecenas mi dolor, fringilla fringilla lorem eget, maximus dignissim lectus. Cras condimentum elementum est, sed placerat massa ultrices ac. -->
                 </p>
-            <a class="btn btn-primary btn-lg" href="contact.html" role="button">My Projects Portfolio</a>
+            <a class="btn btn-primary btn-lg" href="portfolio.html" role="button">My Projects Portfolio</a>
+            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/anthony-le-aa4983169/" role="button">My LinkedIn</a>
+            <a class="btn btn-primary btn-lg" href="https://github.com/aale12" role="button">My GitHub</a>
           </div>   
     </div>
 <!--Footer-->
