--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -50,6 +50,9 @@
                     <a href="../word_guess_game/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
+                    <a href="https://github.com/aale12/aale12.github.io/tree/master/Projects/word_guess_game" class="btn btn-secondary">
+                        Code Here!
+                    </a>
                 </div>
             </div>
 
@@ -65,6 +68,9 @@
                         </p>
                     <a href="../GIFTASTIC/index.html" class="btn btn-primary">
                         Check it out!
+                    </a>
+                    <a href="https://github.com/aale12/aale12.github.io/tree/master/Projects/GIFTASTIC" class="btn btn-secondary">
+                        Code Here!
                     </a>
                 </div>
             </div>
@@ -100,21 +106,27 @@
                     <a href="../star-wars-rgp/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
+                    <a href="https://github.com/aale12/aale12.github.io/tree/master/Projects/star-wars-rgp" class="btn btn-secondary">
+                        Code Here!
+                    </a>
                 </div>
             </div>
 
 <!--Project 5-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="images/300px-Rock-paper-scissors.svg.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 5
+                            Multiplayer Rock Paper Scissors
                     </h5>
                         <p class="card-text">
-                            Description for Project 5 goes here!
+                            One of my more ambitious solo projects.  I make a rock paper scissors game with multiplayer functionalitya and chat.  It's not quite working yet but I'm working out the kinks!
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="../RPSMP/index.html" class="btn btn-primary">
                         Check it out!
+                    </a>
+                    <a href="https://github.com/aale12/aale12.github.io/tree/master/Projects/RPSMP" class="btn btn-secondary">
+                        Code Here!
                     </a>
                 </div>
             </div>
@@ -150,21 +162,27 @@
                     <a href="../triviaGame/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
+                    <a href="https://github.com/aale12/aale12.github.io/tree/master/Projects/triviaGame" class="btn btn-secondary">
+                        Code Here!
+                    </a>
                 </div>
             </div>
 
 <!--Project 6-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="images/PlumCrazyPlayer.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 6
+                            Hooligans!
                     </h5>
                         <p class="card-text">
-                            Description for Project 6 goes here!
+                            A group project with myself, irichard03, btdrizzle, and LealTX.  We make a browser game where you can challenge sports fans from other cities to a street brawl!
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="https://irichard03.github.io/Project1/" class="btn btn-primary">
                         Check it out!
+                    </a>
+                    <a href="https://github.com/irichard03/Project1" class="btn btn-secondary">
+                        Code Here!
                     </a>
                 </div>
             </div>
